--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,21 @@ name = "github-webhooks-rs"
 version = "0.1.0"
 edition = "2021"
 
+[build-dependencies]
+eyre = "0.6.8"
+schemars = { version = "0.8.12", default-features = false }
+serde = "1.0.159"
+serde_json = "1.0.95"
+typify = { git = "https://github.com/oxidecomputer/typify", default-features = false }
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies.reqwest]
+version = "0.11.16"
+default-features = false
+features = ["rustls-tls", "rustls-tls-native-roots", "blocking"]
+
 [dependencies]
+chrono = { version = "0.4.24", features = ["serde"] }
+serde = { version = "1.0.159", features = ["derive"] }
+serde_json = "1.0.95"
