--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,20 +3,18 @@ name = "ocho-gato"
 version = "0.1.0"
 edition = "2021"
 
-[build-dependencies]
-eyre = "0.6.8"
-schemars = { version = "0.8.12", default-features = false }
-serde = "1.0.159"
-serde_json = "1.0.95"
-typify = { git = "https://github.com/oxidecomputer/typify", default-features = false }
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
 hex = "0.4.3"
-hmac = { version = "0.12.1", features = ["std"] }
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
-sha2 = "0.10.6"
 thiserror = "1.0.40"
+
+[build-dependencies]
+eyre = "0.6.8"
+schemars = { version = "0.8.12", default-features = false }
+serde = "1.0.159"
+serde_json = "1.0.95"
+typify = "0.0.12"
