--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "ocho-gato"
+description = "Rust library for the GitHub Webhook API"
 version = "0.1.0"
 edition = "2021"
+license-file = "LICENSE-MIT"
+homepage = "https://github.com/cdmistman/ocho-gato"
+repository = "https://github.com/cdmistman/ocho-gato"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
